--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicholas Abraham Sigurdsson</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Web CSS.css">
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>    
     <h1>Nicholas Abraham Sigurðsson (Pardede)</h1>
